cursor change z-indexes corrected

--- a/src/style/components/_dynamicText.scss
+++ b/src/style/components/_dynamicText.scss
@@ -36,13 +36,13 @@
       font-size: 1.3rem;
     }
     @media screen and (min-width:650px) {
-      display: none;
+      // display: none;
     }
  
   }
   .appear {
     color: blue;
-    animation: appear 2s ease infinite;
+    animation: appear 3s ease infinite;
     opacity: 0;
   }
   
