--- a/src/style/components/_mouse.scss
+++ b/src/style/components/_mouse.scss
@@ -1,16 +1,26 @@
-.cursor {
-  width: 12px;
-  height: 12px;
-  border: 1px solid $color-2;
+.cursor, .outer-cursor {
   border-radius: 50%;
   position: absolute;
   transform: translate(-50%, -50%);
   pointer-events: none;
   transition: none;
-  z-index: 2;
+  z-index: 10001;
   backdrop-filter: brightness(115%);
+}
+.cursor {
+  width: 12px;
+  height: 12px;
+  background: $color-2;
+  opacity: .5;
+  // background: #ff3e13;
+  // mix-blend-mode: difference;
 }
 .cursor.hovered {
   width: 30px;
   height: 30px;
+}
+.outer-cursor {
+  width: 30px;
+  height: 30px;
+  border: 1px solid $color-2;
 }
